# burn-gpt-2-style-embedding-model

./: CLAUDE.md  Cargo.toml  README.md  SIMILARITY_FIX.md  TRAINING.md  tokenizer.json
examples/: minimal_training.rs
src/: batcher.rs  data.rs  embedding.rs  lib.rs  losses.rs  main.rs  metrics.rs  model.rs  similarity.rs  summary.rs  tokenizer.rs  training.rs  validation.rs
