[package]
name = "burn-gpt2-embedding-model"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gpt2-embedding"
path = "src/main.rs"

[dependencies]
burn = { version = "0.18", features = ["wgpu", "std", "train", "dataset"], default-features = false }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
rand = "0.8"
csv = "1.3"
indicatif = "0.17"
simsimd = "6.5.3"

[dev-dependencies]
tempfile = "3.10"
